@@ -1,124 +1,87 @@
 package com.smartlogix.bff.service;
 
-import com.smartlogix.bff.client.AuthClient;
 import com.smartlogix.bff.client.InventarioClient;
 import com.smartlogix.bff.client.PedidosClient;
 import com.smartlogix.bff.model.PedidoDTO;
+import com.smartlogix.bff.model.PedidoItemDTO;
 import com.smartlogix.bff.model.ProductoDTO;
-import com.smartlogix.bff.model.UsuarioDTO;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class BffServiceTest {
 
-    @Mock private InventarioClient inventarioClient;
-    @Mock private PedidosClient pedidosClient;
-    @Mock private AuthClient authClient;
+    @Mock
+    private InventarioClient inventarioClient;
+
+    @Mock
+    private PedidosClient pedidosClient;
 
     @InjectMocks
     private BffService bffService;
 
     @Test
-    void obtenerCatalogoDebeRetornarListaDeProductos() {
-        ProductoDTO p = new ProductoDTO();
-        p.setSku("SKU-001");
-        when(inventarioClient.listarTodos()).thenReturn(List.of(p));
+    void debeObtenerCatalogo() {
+        // Arrange
+        ProductoDTO mockProduct = new ProductoDTO();
+        mockProduct.setSku("SKU-1");
+        mockProduct.setNombre("Test Product");
+        when(inventarioClient.listarTodos()).thenReturn(Collections.singletonList(mockProduct));
 
-        List<ProductoDTO> result = bffService.obtenerCatalogo();
+        // Act
+        List<ProductoDTO> catalogo = bffService.obtenerCatalogo();
 
-        assertEquals(1, result.size());
-        assertEquals("SKU-001", result.get(0).getSku());
+        // Assert
+        assertNotNull(catalogo);
+        assertEquals(1, catalogo.size());
+        assertEquals("SKU-1", catalogo.get(0).getSku());
+        verify(inventarioClient, times(1)).listarTodos();
     }
 
     @Test
-    void realizarCompraDebeDelegarAPedidosClient() {
-        PedidoDTO pedido = new PedidoDTO();
-        pedido.setEstado("COMPLETADO");
-        when(pedidosClient.crearPedido(pedido)).thenReturn(pedido);
+    void debeRealizarCompra() {
+        // Arrange
+        PedidoItemDTO itemRequest = PedidoItemDTO.builder()
+                .skuProducto("SKU-1")
+                .cantidad(2)
+                .build();
 
-        PedidoDTO result = bffService.realizarCompra(pedido);
+        PedidoDTO request = PedidoDTO.builder()
+                .items(Collections.singletonList(itemRequest))
+                .build();
 
-        assertEquals("COMPLETADO", result.getEstado());
-        verify(pedidosClient, times(1)).crearPedido(pedido);
-    }
+        PedidoItemDTO itemResponse = PedidoItemDTO.builder()
+                .skuProducto("SKU-1")
+                .cantidad(2)
+                .precioUnitario(new BigDecimal("1000"))
+                .subtotal(new BigDecimal("2000"))
+                .build();
 
-    @Test
-    void crearProductoDebeDelegarAInventarioClient() {
-        ProductoDTO p = new ProductoDTO();
-        p.setSku("SKU-002");
-        when(inventarioClient.crearProducto(p)).thenReturn(p);
+        PedidoDTO response = PedidoDTO.builder()
+                .items(Collections.singletonList(itemResponse))
+                .estado("COMPLETADO")
+                .precioTotal(new BigDecimal("2000"))
+                .build();
 
-        ProductoDTO result = bffService.crearProducto(p);
+        when(pedidosClient.crearPedido(request)).thenReturn(response);
 
-        assertEquals("SKU-002", result.getSku());
-    }
+        // Act
+        PedidoDTO resultado = bffService.realizarCompra(request);
 
-    @Test
-    void actualizarProductoDebeDelegarAInventarioClient() {
-        ProductoDTO p = new ProductoDTO();
-        p.setSku("SKU-001");
-        when(inventarioClient.actualizarProducto("SKU-001", p)).thenReturn(p);
-
-        ProductoDTO result = bffService.actualizarProducto("SKU-001", p);
-
-        assertEquals("SKU-001", result.getSku());
-    }
-
-    @Test
-    void eliminarProductoDebeLlamarAInventarioClient() {
-        doNothing().when(inventarioClient).eliminarProducto("SKU-001");
-
-        bffService.eliminarProducto("SKU-001");
-
-        verify(inventarioClient, times(1)).eliminarProducto("SKU-001");
-    }
-
-    @Test
-    void listarPedidosDebeDelegarAPedidosClient() {
-        PedidoDTO pedido = new PedidoDTO();
-        when(pedidosClient.listarPedidos()).thenReturn(List.of(pedido));
-
-        List<PedidoDTO> result = bffService.listarPedidos();
-
-        assertEquals(1, result.size());
-    }
-
-    @Test
-    void registrarUsuarioDebeDelegarAAuthClient() {
-        UsuarioDTO dto = new UsuarioDTO();
-        dto.setUsername("nuevo");
-        when(authClient.registrarUsuario(dto)).thenReturn(dto);
-
-        UsuarioDTO result = bffService.registrarUsuario(dto);
-
-        assertEquals("nuevo", result.getUsername());
-    }
-
-    @Test
-    void listarUsuariosDebeDelegarAAuthClient() {
-        UsuarioDTO dto = new UsuarioDTO();
-        when(authClient.listarUsuarios()).thenReturn(List.of(dto));
-
-        List<UsuarioDTO> result = bffService.listarUsuarios();
-
-        assertEquals(1, result.size());
-    }
-
-    @Test
-    void eliminarUsuarioDebeLlamarAAuthClient() {
-        doNothing().when(authClient).eliminarUsuario(1L);
-
-        bffService.eliminarUsuario(1L);
-
-        verify(authClient, times(1)).eliminarUsuario(1L);
+        // Assert
+        assertNotNull(resultado);
+        assertEquals("COMPLETADO", resultado.getEstado());
+        verify(pedidosClient, times(1)).crearPedido(request);
     }
 }
